--- a/Blog.DAL.Tests/packages.config
+++ b/Blog.DAL.Tests/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="EntityFramework" version="6.1.3" targetFramework="net451" />
+  <package id="MSTest" version="3.3.0-preview.24164.4" targetFramework="net451" />
 </packages>
