--- a/Blog.DAL.Tests/packages.config
+++ b/Blog.DAL.Tests/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="EntityFramework" version="6.1.3" targetFramework="net451" />
   <package id="MSTest" version="3.3.0-preview.24164.4" targetFramework="net451" />
+  <package id="MSTest.TestFramework" version="2.2.10" targetFramework="net451" />
 </packages>
